--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ html {
   scroll-padding-top: 65px;
   scrollbar-width: none;
   -ms-overflow-style: none;
+  font-family: "SUIT-Regular";
 }
 html::-webkit-scrollbar {
   display: none;
@@ -22,3 +23,10 @@ body {
   user-select: none;
 }
 
+@font-face {
+  font-family: "SUIT-Regular";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_suit@1.0/SUIT-Regular.woff2")
+    format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
