[DESIGN] 폰트 재적용

--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,11 @@ html {
   -ms-overflow-style: none;
   font-family: "SUIT-Regular";
 }
+
 html::-webkit-scrollbar {
   display: none;
 }
+
 body {
   margin: 0;
   padding: 0;
@@ -21,6 +23,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  font-family: "SUIT-Regular";
 }
 
 @font-face {
